Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectNumber.quorum
class Main
    action Main
        Object o        
        o = cast(Object, 7.5)
        output "passed"
    end
end