Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumberBooleanField.quorum
class main
    number num = 0.0
    action Main
        num = cast(number, true)
    end
end